syntax = "proto3";
package broker.piecer.v1;
option go_package = "github.com/textileio/broker-core/gen/broker/piecer/v1;piecer";

message ReadyToPrepareRequest {
    string msg_id = 1; // TODO(jsign): set up and add validations.
    string storage_deal_id = 2;
    string data_cid = 3;
}
